Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/sd15/deployment_sd15.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-diffusion-sd15-deployment
  labels:
    app: stable-diffusion-sd15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stable-diffusion-sd15
  template:
    metadata:
      labels:
        app: stable-diffusion-sd15
    spec:
      nodeSelector:
        cloud.google.com/gke-gpu-sharing-strategy: time-sharing
        cloud.google.com/gke-max-shared-clients-per-gpu: "2"
      volumes:
        - name: stable-diffusion-storage
          persistentVolumeClaim:
            claimName: vol1
      containers:
      - name: stable-diffusion-webui
        image: us-central1-docker.pkg.dev/happyaigc/sd-web-ui-artifacts/sd-webui:inference
        resources:
          limits:
            cpu: 1800m
            memory: 23Gi
            nvidia.com/gpu: 1
        ports:
          - containerPort: 7860
        # add by yx----启动健康检查
        startupProbe:
          httpGet:
            path: /favicon.ico
            port: 7860
          failureThreshold: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /favicon.ico
            port: 7860
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /favicon.ico
            port: 7860
          failureThreshold: 6
          periodSeconds: 10
        # end--by yx
        volumeMounts:
          - mountPath: "/stable-diffusion-webui/models/Stable-diffusion"
            name: stable-diffusion-storage
            subPath: models/Stable-diffusion/sd15
          - mountPath: "/stable-diffusion-webui/outputs"
            name: stable-diffusion-storage
            subPath: outputs
          - mountPath: "/stable-diffusion-webui/models/ControlNet"
            name: stable-diffusion-storage
            subPath: models/ControlNet
