Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/sd15/service_inference_sd15_multi.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd-web
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8080":"my-backendconfig"}}'
    # cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 7860
  selector:
    app: stable-diffusion-sd15
  # type: NodePort
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-ingress
spec:
  defaultBackend:
    service:
      name: sd-web
      port:
        number: 8080
